--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@types/node": "11.13.8",
     "@types/react": "16.8.14",
     "@types/react-dom": "16.8.4",
+    "overmind": "^17.1.0",
+    "overmind-react": "^18.1.0",
+    "overmind-vue": "^17.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
-    "typescript": "3.4.5"
+    "typescript": "3.4.5",
+    "vue": "^2.6.10"
   },
   "scripts": {
     "start": "react-scripts start",
